--- a/static_base/stylesheets/main.less
+++ b/static_base/stylesheets/main.less
@@ -123,6 +123,35 @@ body {
     margin-right: 0.5em;
 }
 
+.student_container {
+
+    padding: 0.4em 0em 1em 0em;
+
+    .stud {
+        display: inline-block;
+        padding: 0.4em 0.4em 0.4em 0.4em;
+        background-color: rgba(200, 100, 50, 0.25);
+        border-radius: 0.2em;
+        -moz-border-radius: 0.2em;
+    }
+}
+
+.oracle {
+
+    display: inline-block;
+    padding: 0.4em 0.4em 0.4em 0.4em;
+    background-color: rgba(200, 100, 50, 0.25);
+    border-radius: 0.2em;
+    -moz-border-radius: 0.2em;
+}
+
+.group {
+    font-size: 1.2em;
+    font-style: italic;
+    font-weight: bold;
+
+}
+
 .tagger {
     padding: 0.2em;
     display: block;
