--- a/templates/header.html
+++ b/templates/header.html
@@ -11,15 +11,23 @@
     <!-- less.js scripts -->
     <script src="/static/javascripts/less.min.js"></script>
 
-    <!-- jquery -->
     <script src="/static/javascripts/jquery.min.js"></script>
 
     <script src="/static/javascripts/main.js"></script>
+
+    <script src="/static/javascripts/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
+
+    <script src="/static/javascripts/tag-it.js" type="text/javascript" charset="utf-8"></script>
+
+    <link rel="stylesheet" type="text/css" href="/static/stylesheets/jquery-ui-1.8.21.custom.css">
+
+    <link href="/static/stylesheets/jquery.tagit.css" rel="stylesheet" type="text/css">
 
     <style type="text/css">
         <!--
         -->
     </style>
+
 </head>
 
 <body>
