--- a/templates/navigator.html
+++ b/templates/navigator.html
@@ -1,7 +1,7 @@
 {% block navigator %}
 <div class="bar">
 <div class="navigator">
-    <a href="/">Add wish</a>
+    <a href="/student/tagittest">Add wish</a>
     <a href="/flush">Flush database</a>
 </div>
 </div>
