--- a/templates/tagittest.html
+++ b/templates/tagittest.html
@@ -15,9 +15,8 @@
 
 </script>
 
+{{ error }}
 <div> Register a wish </div>
-
-
 
 <form action="/student/submitwish" method="POST"> {% csrf_token %}
 <ul id="mytags" class="tagit ui-widget ui-widget-content ui-corner-all">
