Misc. views and templates

--- a/templates/navigator.html
+++ b/templates/navigator.html
@@ -2,7 +2,8 @@
 <div class="bar">
 <div class="navigator">
     <a href="/student/tagittest">Add wish</a>
-    <a href="/flush">Flush database</a>
+    <a href="/student/mywishes">My wishes</a>
+    <a href="/group/allgroups">Browse groups</a>
 </div>
 </div>
 {% endblock %}
