introduced 'my' application for user management

--- a/static_base/stylesheets/main.less
+++ b/static_base/stylesheets/main.less
@@ -174,3 +174,24 @@ body {
         width: 90%;
     }
 }
+
+
+
+.counter {
+    background-color: rgba( 0, 0, 0, 0.1 );
+    width: 30%;
+    text-align: center;
+    margin: 4em;
+    padding: 1em 1em 4em 1em;
+    border-radius: 0.5em;
+    -moz-border-radius: 0.5em;
+
+
+    .days {
+        font-size: 10em;
+    }
+
+    .label {
+        font-size: 0.1em;
+    }
+}
