--- a/templates/my/gateway.html
+++ b/templates/my/gateway.html
@@ -2,7 +2,32 @@
 
 <div class="column_container">
     <div class="title">UNIFI</div>
-    <div class="greeting">{{ greeting }}</div>
+    <div class="greeting">
+        Velkommen tilbake, {{ user.username }}! Hva har du lyst å samarbeide om?
+    </div>
+    <div class="column" id="tagit">
+        <h2>Nytt ønske</h2>
+        <!-- [/] extract as a template block -->
+        <div class="new_wish">
+            <script type="text/javascript">
+                $(document).ready(function() {
+                    $("#mytags").tagit( {
+                        availableTags: ["c++", "java", "php", "javascript", "ruby", "python", "c"],
+                        allowSpaces: true,
+                        fieldName: "tags",
+                        itemName: "user"
+                    })
+                });
+            </script>
+            <form action="/student/submitwish" method="POST" class="tagit_form"> {% csrf_token %}
+                <ul id="mytags" class="tagit ui-widget ui-widget-content ui-corner-all">
+                    <li class="tagit-new"></li>
+                </ul>
+                <input type="submit" value="Legg til" />
+            </form>
+        </div>
+        <!-- -->
+    </div>
     <div class="column">
         <h2>Dine ønsker</h2>
         <ul>
