--- a/static_base/stylesheets/main.less
+++ b/static_base/stylesheets/main.less
@@ -202,22 +202,45 @@ body {
     }
 
     .column {
+        width: 42%;
         text-align: left;
         float: left;
         border: 0.2em solid rgba( 0, 0, 0, 0.1 );
         padding: 1em;
-        margin: 1em;
+        margin: 0.75em;
         background-color: rgba( 0, 0, 0, 0.05 );
         border-radius: 0.2em;
         -moz-border-radius: 0.2em;
         max-width: 90%;
 
-        li {
-            border-radius: 0.2em;
-            -moz-border-radius: 0.2em;
-            padding: 1em;
-        }
 
+       .wish {
+           border-radius: 0.2em;
+           -moz-border-radius: 0.2em;
+           padding: 1em 2em 1em 1em;
+           position: relative;
+
+
+            .wish_delete {
+                width: 1.5em;
+                text-align: center;
+                position: absolute;
+                display: inline-block;
+                top: -0.2em;
+                right: -0.2em;
+                font-size: 0.8em;
+                padding: 0.25em;
+                background-color: rgba( 255, 124, 124, 0.3 );
+                border-radius: 0.2em;
+                -moz-border-radius: 0.2em;
+                cursor: pointer;
+
+                a {
+                    color: red;
+                    text-decoration: none;
+                }
+            }
+        }
     }
 
     .column#tagit {
@@ -226,7 +249,12 @@ body {
 }
 
 .tagit_form {
-    input {
-        font-size: 3em;
+
+    text-align: center;
+
+    input[type="submit"] {
+        font-weight: bold;
+        width: 90%;
     }
 }
+
