--- a/static_base/stylesheets/main.less
+++ b/static_base/stylesheets/main.less
@@ -202,7 +202,7 @@ body {
     }
 
     .column {
-        width: 42%;
+        width: 38%;
         text-align: left;
         float: left;
         border: 0.2em solid rgba( 0, 0, 0, 0.1 );
@@ -212,33 +212,33 @@ body {
         border-radius: 0.2em;
         -moz-border-radius: 0.2em;
         max-width: 90%;
+    }
 
+    .wish {
+        border-radius: 0.2em;
+        -moz-border-radius: 0.2em;
+        padding: 0.5em 2em 0.5em 0.5em;
+        margin: 0.5em;
+        border: 0.08em dotted rgba( 0, 0, 0, 0.15 );
+        position: relative;
 
-       .wish {
-           border-radius: 0.2em;
-           -moz-border-radius: 0.2em;
-           padding: 1em 2em 1em 1em;
-           position: relative;
+        .wish_delete {
+            width: 1.5em;
+            text-align: center;
+            position: absolute;
+            display: inline-block;
+            top: 0.2em;
+            right: 0.2em;
+            font-size: 0.8em;
+            padding: 0.25em;
+            background-color: rgba( 255, 124, 124, 0.3 );
+            border-radius: 0.2em;
+            -moz-border-radius: 0.2em;
+            cursor: pointer;
 
-
-            .wish_delete {
-                width: 1.5em;
-                text-align: center;
-                position: absolute;
-                display: inline-block;
-                top: -0.2em;
-                right: -0.2em;
-                font-size: 0.8em;
-                padding: 0.25em;
-                background-color: rgba( 255, 124, 124, 0.3 );
-                border-radius: 0.2em;
-                -moz-border-radius: 0.2em;
-                cursor: pointer;
-
-                a {
-                    color: red;
-                    text-decoration: none;
-                }
+            a {
+                color: red;
+                text-decoration: none;
             }
         }
     }
@@ -246,6 +246,11 @@ body {
     .column#tagit {
         width: 100%;
     }
+
+   .help {
+        font-size: 0.8em;
+    }
+
 }
 
 .tagit_form {
@@ -257,4 +262,3 @@ body {
         width: 90%;
     }
 }
-
