minor changes in gateway-template

--- a/templates/my/gateway.html
+++ b/templates/my/gateway.html
@@ -14,15 +14,28 @@
                 <li><b>Beskriv</b> det du har lyst å arbeide med andre om <b>ved hjelp av nøkkelord</b>.</li>
                 <li>Hvert nøkkelord skal bestå av <b>kun ett ord</b> (duh). Om du er nødt til å skrive inn et
                 uttrykk bestående av to ord som henger veldig godt sammen, setter du en <b>bindestrek</b> imellom.</li>
-                <li>Prøv å ha <b>kun ett fagkode per ønske</b>, hvis du vil samarbeide om forskjellige fag.
+                <li>Prøv å ha <b>kun ett fagkode per ønske</b>, hvis du planlegger å samarbeide om forskjellige fag.
                 For de andre fag setter du bare opp <b>flere nye ønsker</b>.</li>
-                <li>Mens du skriver, vil systemet foreslå taggene som andre er interessert i. Husk, at du kan godt lage
-                dine egne.</li>
+                <li>Mens du skriver, <b>foreslår</b> systemet de taggene som andre er interessert i. Husk, at du kan godt lage
+                <b>dine egne</b> selv om de ikke er farget.</li>
                 <li><b>Fargen</b> på forslagene indikerer <b>hvor populære</b> disse taggene er, og hvor sannsynlig
-                at du får et match om de med andre. Hvilke farger?</li>
+                og hvor snart du får en gruppe. Hvilke farger?</li>
+                <li>I følge paragraf 3. avsnitt 4, er det forbudt å overbelaste brukeren med en så stor mengde pissprat,
+                så lenge den ikke begynner med ordene Lorem Ipsum.</li>
             </ul>
         </div>
         {% include "tag/tagger.html" %}
+        <div class="help">
+            <ul>
+                <li>Etter at ønsket ditt er registrert vil en gruppe bli dannet, du kan når som helst trekke deg
+                fra samarbeidet. Det ville Biggie Smalls ha gjort.</li>
+                <li>Besvar mailet med 'Reply to all' for å kontakte alle på gruppen. Kanskje så trenger de Cialis eller Viagra?</li>
+                <li>Medlemmer av en unifi-gruppe kan be studieoraklene om faglig hjelp. Spør du pent, så gjør de obligen din
+                for deg.</li>
+            </ul>
+        </div>
+
+
     </div>
     <div class="column">
         <h2>Dine ønsker</h2>
