minor changes in gateway-template

--- a/static_base/stylesheets/main.less
+++ b/static_base/stylesheets/main.less
@@ -247,8 +247,13 @@ body {
         width: 100%;
     }
 
-   .help {
-       font-size: 0.8em;
+    .help {
+        font-size: 0.8em;
+    }
+
+    .count {
+        color: rgba( 0, 0, 0, 0.5 );
+        font-style: italic;
     }
 
 }
