added support for dracula svg-graph library

--- a/static_base/stylesheets/main.less
+++ b/static_base/stylesheets/main.less
@@ -3,6 +3,12 @@ body {
     padding: 1.5em 3em 1.5em 10%;
     background-color: rgb( 212, 212, 212 );
     background-image: url("http://subtlepatterns.com/patterns/lghtmesh.png");
+
+
+    a {
+        color: rgb( 192, 128, 64 );
+    }
+
 }
 
 .content {
@@ -231,7 +237,7 @@ body {
             right: 0.2em;
             font-size: 0.8em;
             padding: 0.25em;
-            background-color: rgba( 255, 124, 124, 0.3 );
+            background-color: rgba( 0, 0, 0, 0.1 );
             border-radius: 0.2em;
             -moz-border-radius: 0.2em;
             cursor: pointer;
@@ -249,6 +255,7 @@ body {
 
     .help {
         font-size: 0.8em;
+        padding-right: 1em;
     }
 
     .count {
