added unsafe graphical user representation

--- a/static_base/stylesheets/main.less
+++ b/static_base/stylesheets/main.less
@@ -83,6 +83,10 @@ body {
         top: 1em;
         right: 1em;
         float: right;
+
+        img {
+            width: 100%;
+        }
     }
 
     .navigator {
