--- a/templates/navigator.html
+++ b/templates/navigator.html
@@ -4,6 +4,8 @@
     <a href="/student/tagittest">Add wish</a>
     <a href="/student/mywishes">My wishes</a>
     <a href="/group/allgroups">Browse groups</a>
+    <a href="/prototype/intrude">Intrude</a>
+    <a href="/prototype/intrude">Leave</a>
 </div>
 </div>
 {% endblock %}
