minor css changes, improving usability

--- a/static_base/stylesheets/main.less
+++ b/static_base/stylesheets/main.less
@@ -277,4 +277,8 @@ body {
         font-weight: bold;
         width: 90%;
     }
+
+    ul {
+       border: 0.2em solid rgba( 192, 0, 0, 1 );
+    }
 }
