--- a/templates/navigator.html
+++ b/templates/navigator.html
@@ -1,11 +1,14 @@
 {% block navigator %}
 <div class="bar">
-<div class="navigator">
-    <a href="/student/tagittest">Add wish</a>
-    <a href="/student/mywishes">My wishes</a>
-    <a href="/group/allgroups">Browse groups</a>
-    <a href="/prototype/intrude">Intrude</a>
-    <a href="/prototype/intrude">Leave</a>
-</div>
+    <div class="navigator">
+        <!-- student -->
+        <a href="/student/tagittest">Add wish</a>
+        <a href="/student/mywishes">My wishes</a>
+        <!-- group -->
+        <a href="/group/allgroups">Browse groups</a>
+        <!-- prototype -->
+        <a href="/prototype/intrude">Intrude</a>
+        <a href="/prototype/intrude">Leave</a>
+    </div>
 </div>
 {% endblock %}
