--- a/templates/status.html
+++ b/templates/status.html
@@ -2,7 +2,7 @@
 <div class="bar">
     <div class="status">
         <div>You are logged in as <span class="student">{{ user }}</span></div>
-        <img src="/static/images/users/{{ user.pk }}.png" alt="" />
+        <a href="/my/"><img src="/static/images/users/{{ user.pk }}.png" alt="" /></a>
     </div>
 </div>
 {% endblock %}
