--- a/templates/navigator.html
+++ b/templates/navigator.html
@@ -8,7 +8,7 @@
         <a href="/group/allgroups">Browse groups</a>
         <!-- prototype -->
         <a href="/prototype/intrude">Intrude</a>
-        <a href="/prototype/intrude">Leave</a>
+        <a href="/prototype/leave">Leave</a>
     </div>
 </div>
 {% endblock %}
