--- a/static_base/stylesheets/main.less
+++ b/static_base/stylesheets/main.less
@@ -233,7 +233,7 @@ body {
         position: relative;
 
         .wish_delete {
-            width: 1.5em;
+            width: 1.4em;
             text-align: center;
             position: absolute;
             display: inline-block;
@@ -254,6 +254,10 @@ body {
     }
 
     .column#tagit {
+        width: 100%;
+    }
+
+    .column#oracle {
         width: 100%;
     }
 
@@ -279,6 +283,32 @@ body {
     }
 
     ul {
-       border: 0.2em solid rgba( 192, 0, 0, 1 );
+        border: 0.15em solid rgba( 192, 0, 0, 1 );
+        border-bottom: 0.2em solid rgba( 128, 0, 0, 1 );
+        cursor: text;
+    }
+}
+
+.ui-autocomplete {
+    background-color: white;
+}
+
+.graph {
+    background-color: rgba( 255, 255, 255, 0.3 );
+    border: 0.08em dotted rgba( 0, 0, 0, 0.15 );
+    margin: 0.2em;
+    text-align: center;
+    position: relative;
+
+    .description {
+        font-size: 0.8em;
+        padding: 0.5em;
+        position: absolute;
+        bottom: 0.5em;
+        right: 0.5em;
+        color: rgb( 255, 255, 255 );
+        background-color: rgba( 0, 0, 0, 0.8 );
+        border-radius: 0.75em;
+        -moz-border-radius: 0.75em;
     }
 }
