--- a/static_base/stylesheets/main.less
+++ b/static_base/stylesheets/main.less
@@ -301,10 +301,11 @@ body {
     position: relative;
 
     .description {
+        text-align: right;
         font-size: 0.8em;
         padding: 0.5em;
         position: absolute;
-        bottom: 0.5em;
+        top: 0.5em;
         right: 0.5em;
         color: rgb( 255, 255, 255 );
         background-color: rgba( 0, 0, 0, 0.8 );
