--- a/templates/prototype/graph.html
+++ b/templates/prototype/graph.html
@@ -9,7 +9,10 @@
         var g = new Graph();
         {% for edge in edges %}
         {% if edge.0 != edge.1 %}
-        g.addEdge( "{{ edge.0 }}", "{{ edge.1 }}" );
+        g.addEdge(
+            "{{ edge.1 }}", "{{ edge.2 }}",
+            { label : "{{ edge.0 }}" }
+        );
         {% endif %}
         {% endfor %}
         var layouter = new Graph.Layout.Spring(g);
