--- a/templates/prototype/graph.html
+++ b/templates/prototype/graph.html
@@ -1,6 +1,6 @@
 {% include "header.html" %}
 
-<!-- graph drawing -->
+<!-- relation graph -->
 
 <h1>Group View</h1>
 
@@ -8,17 +8,17 @@
     <script>
         var g = new Graph();
         {% for edge in edges %}
-        {% if edge.0 != edge.1 %}
-        g.addEdge(
-            "{{ edge.1 }}", "{{ edge.2 }}",
-            { label : "{{ edge.0 }}" }
-        );
-        {% endif %}
+            {% if edge.0 != edge.1 %}
+            g.addEdge(
+                "{{ edge.1 }}", "{{ edge.2 }}",
+                { label: "{{ edge.0 }}", directed: true, stroke: "black" }
+            );
+            {% endif %}
         {% endfor %}
         var layouter = new Graph.Layout.Spring(g);
         layouter.layout();
         var renderer = new Graph.Renderer.Raphael(
-            'canvas', g, 800, 750
+            'canvas', g, 800, ({{ data.groups }} * 37)
         );
         renderer.draw();
     </script>
