--- a/templates/my/gateway.html
+++ b/templates/my/gateway.html
@@ -102,7 +102,9 @@
         <!-- ... -->
     </div>
 
+
     <div class="column" id="oracle">
+    {% if is_oracle %}
         <h2>Gruppene som trenger hjelp</h2>
         <h4>Her bør vi ha et søke/filtreringsfelt for gruppetaggene.</h4>
         <ul>
@@ -122,7 +124,11 @@
             <hr />
         {% endfor %}
         </ul>
+    {% else %}
+        <h3>Du har ikke orakelstatus i systemet</h3>
+    {% endif %}
     </div>
+
 </div>
 
 {% include "footer.html" %} 
